<resources>
    <string name="app_name">BienestarUqUsuario</string>

    <string name="navigation_drawer_open">Abrir Navegacion</string>
    <string name="navigation_drawer_close">Cerrar Navegacion</string>

    <string name="action_settings">Configuraciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- String values menu -->
    <string name="itemMenuUno">Principal</string>
    <string name="itemMenuDos">Mi Perfil</string>
    <string name="itemMenuTres">Historial Servicios</string>


    <!-- String values user -->
    <string name="txtIdentificacion">Numero Documento</string>
    <string name="txtTipoUsuario">Tipo Usuario</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtApellido">Apellido</string>
    <string name="txtDependencia">Dependencia</string>
    <string name="txtTelefono">Telefono</string>
    <string name="btnGuardar">Guardar</string>


    <!-- String value solicitud servicios -->
    <string name="txtFiltro">Buscar Servicios</string>
    <string name="txtFechaSolicitud">2018/04/24</string>
    <string name="btnAgregar">Agregar Solicitud</string>
    <string name="btnVisualizarSolicitud">Ver Solicitudes</string>


    <!-- String value detalle servicio -->
    <string name="txtCodigo">Codigo Servicio</string>
    <string name="txtNombreServicio">Nombre Servicio</string>
    <string name="txtDescripcion">Descripcion</string>
    <string name="txtRecursosDisponibles">Recursos Disponibles</string>
    <string name="txtUbicacion">Ubicacion Servicio</string>
    <string name="txtTipoServicio">Tipo Servicio</string>
    <string name="btnCancelar">Cancelar Servicio</string>
    <string name="txtFechaSolicitudDetalle">2018/04/24</string>


    <!-- String value button options -->
    <string name="lblCrearSolicitud">Crear Solicitud</string>

</resources>
