<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="fragments.FragmentDetalleServicioSolicitado"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <ImageButton
        android:id="@+id/imgServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <EditText
                    android:id="@+id/txtCodigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/txtCodigo" />

                <EditText
                    android:id="@+id/txtNombreServicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/txtNombreServicio" />

                <EditText
                    android:id="@+id/txtDescripcionServicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:hint="@string/txtDescripcion"/>

                <EditText
                    android:id="@+id/txtRecursosDisponibles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:hint="@string/txtRecursosDisponibles"/>

                <EditText
                    android:id="@+id/txtUbicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/txtUbicacion" />

                <EditText
                    android:id="@+id/txtTipoServicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/txtTipoServicio" />

                <EditText
                    android:id="@+id/txtFechaSolicitudDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:hint="@string/txtFechaSolicitudDetalle"/>

                <Switch
                    android:id="@+id/btnCancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCancelar" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
