<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:layout_margin="6dp"
    card_view:cardBackgroundColor="#BCBCBC"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="7dp"
    android:id="@+id/resumen_solicitud_servicio">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">
        <ImageButton
            android:id="@+id/imgServicioResumen"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:tooltipText="Imagen"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp" />
        <TextView
            android:id="@+id/txtNombreServicioResumen"
            android:text="@string/txtNombreServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imgServicioResumen"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/txtDescripcionServicioResumen"
            android:text="@string/txtDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNombreServicioResumen"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/imgServicioResumen" />
        <TextView
            android:id="@+id/txtUbicacionResumen"
            android:text="@string/txtUbicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDescripcionServicioResumen"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/imgServicioResumen" />
        <TextView
            android:id="@+id/txtTipoServicioResumen"
            android:text="@string/txtTipoServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUbicacionResumen"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/imgServicioResumen" />
        <TextView
            android:id="@+id/txtFechaSolicitudResumen"
            android:text="@string/txtFechaSolicitudDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTipoServicioResumen"
            android:layout_marginTop="5dp"
            android:inputType="date"
            android:layout_toEndOf="@+id/imgServicioResumen"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>