<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.FragmentPerfil"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Nombre Cliente"
                android:textAlignment="center"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:text="@string/btnGuardar" />

        </LinearLayout>


    </android.support.v7.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/imgPerfil"
                android:layout_width="150dp"
                android:layout_height="114dp"
                android:layout_weight="1"
                android:src="@android:drawable/btn_star" />

            <LinearLayout
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/txtIdentificacionUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/txtIdentificacion"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/txtTipoUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:hint="@string/txtTipoUsuario"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="25dp" />

            </LinearLayout>


        </LinearLayout>

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/txtNombre" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/txtApellido" />

        <EditText
            android:id="@+id/txtDependencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/txtDependencia" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/txtTelefono" />

    </LinearLayout>





</LinearLayout>
